--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="container">
+        <h1 class="centre">Rock Paper Scissors</h1>
+        <p class="left comp">Computer: . . .</p>
+        <p class="left you" class>You: . . .</p>
+        <h2 class="centre">Let's Play!</h2>
+        <div class="scores">
+            <p class="left comp-score">Computer Score: 00</p>
+            <p class="right you-score">Your Score: 00</p>
+        </div>
+        
+        <h3 class="centre">Pick your option!</h3>
+
+        <div class="buttons">
+            <button type="button" id="rock">Rock</button>
+            <button type="button" id="paper">Paper</button>
+            <button type="button" id="scissors">Scissors</button>
+        </div>
+    </div>
+
     <script src="javascript.js"></script>
 </body>
 </html>
